Build on Linux: Added linux cosmos hints

--- a/PrismFilesystem/PrismFilesystem.csproj
+++ b/PrismFilesystem/PrismFilesystem.csproj
@@ -25,6 +25,7 @@
 
 		<Reference Include="Cosmos.HAL2">
 			<HintPath>..\..\..\AppData\Roaming\Cosmos User Kit\Kernel\Cosmos.HAL2.dll</HintPath>
+			<HintPath>/opt/cosmos/Kernel/Cosmos.HAL2.dll</HintPath>
 			<CopyLocalSatelliteAssemblies>False</CopyLocalSatelliteAssemblies>
 			<CopyLocal>False</CopyLocal>
 			<Private>True</Private>
@@ -32,6 +33,7 @@
 
 		<Reference Include="Cosmos.System2">
 			<HintPath>..\..\..\AppData\Roaming\Cosmos User Kit\Kernel\Cosmos.System2.dll</HintPath>
+			<HintPath>/opt/cosmos/Kernel/Cosmos.System2.dll</HintPath>
 			<CopyLocalSatelliteAssemblies>False</CopyLocalSatelliteAssemblies>
 			<CopyLocal>False</CopyLocal>
 			<Private>True</Private>
