--- a/PrismAudio/PrismAudio.csproj
+++ b/PrismAudio/PrismAudio.csproj
@@ -27,6 +27,7 @@
 
 		<Reference Include="Cosmos.HAL2">
 			<HintPath>..\..\..\AppData\Roaming\Cosmos User Kit\Kernel\Cosmos.HAL2.dll</HintPath>
+			<HintPath>/opt/cosmos/Kernel/Cosmos.HAL2.dll</HintPath>
 			<CopyLocalSatelliteAssemblies>False</CopyLocalSatelliteAssemblies>
 			<CopyLocal>False</CopyLocal>
 			<Private>True</Private>
@@ -34,6 +35,7 @@
 
 		<Reference Include="Cosmos.System2">
 			<HintPath>..\..\..\AppData\Roaming\Cosmos User Kit\Kernel\Cosmos.System2.dll</HintPath>
+			<HintPath>/opt/cosmos/Kernel/Cosmos.System2.dll</HintPath>
 			<CopyLocalSatelliteAssemblies>False</CopyLocalSatelliteAssemblies>
 			<CopyLocal>False</CopyLocal>
 			<Private>True</Private>
